[metadata]
name = pythonwebdemo
summary = Web Application Demo
description-file = README.md
author = luckylau
author-email = laujunbupt0913@163.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: Python-web Developer
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    webdemo

[entry_points]
console_scripts =